# surfit

./: Hints  README.md  build.sh  build_debug.cmd  build_release.cmd  make_rpm_rh73  make_sln.cmd  make_sln64.cmd  mishadm@web.sourceforge.net.netbox  surfit.spec.rh73
src/: CMakeLists.txt  config.h.in
src/freeflow/: CMakeLists.txt
src/freeflow/src/: f_lcm_simple.cpp  f_lcm_simple.h  f_lcm_simple_tcl.cpp  f_lcm_simple_tcl.h  flow_curv.cpp  flow_curv.h  flow_curvs_tcl.cpp  flow_curvs_tcl.h  flow_data_manager.h  flow_ie.h  flow_points.cpp  flow_points.h  flow_points_tcl.cpp  flow_surf_internal.cpp  flow_surf_tcl.cpp  flow_surf_tcl.h  flow_variables.cpp  flow_variables.h  freeflow_wrap.cxx
src/globe/: CMakeLists.txt
src/globe/src/: dem_show.h  dems_tcl.cpp  dems_tcl.h  f_dem.h  globe.cpp  globe_data_manager.h  globe_ie.h  globe_surf_internal.cpp  globe_surf_tcl.cpp  globe_variables.cpp  globe_variables.h  shortmrf.cpp  shortmrf.h
src/pysurfit/: CMakeLists.txt
src/pysurfit/src/: geom.i  hist.i  solve.i  surfit.i
src/sstuff/: CMakeLists.txt
src/sstuff/src/: bitvec.h  datafile.cpp  fileio.cpp  fileio.h  findfile.h  geom_alg.h  interp.cpp  interp.h  intvec.cpp  intvec.h  rnd.cpp  rnd.h  shortvec.h  sstuff.cpp  sstuff.h  sstuff_ie.h  threads.cpp  vec.cpp  vec.h  vec_alg.h
src/surfit/: CMakeLists.txt
src/surfit/src/: area.cpp  area.h  area_internal.cpp  area_tcl.cpp  area_tcl.h  cmofs.cpp  cmofs.h  cntr.cpp  cntr.h  cntr_tcl.h  cntr_trace.cpp  cntr_trace.h  colorscale.cpp  curv.cpp  curv_internal.cpp  curv_internal.h  curv_tcl.h  curvs_tcl.h  data_manager.cpp  data_manager.h  f_area.cpp  f_area_hist.cpp  f_area_hist.h  f_area_ineq.h  f_area_surf.h  f_area_surf_ineq.h  f_area_wmean.cpp  f_area_wmean.h  f_cntr.h  f_cntr_ineq.cpp  f_completer.h  f_curv.cpp  f_curv.h  f_curv_ineq.h  f_curv_surf.cpp  f_curv_surf_ineq.cpp  f_curv_surf_ineq.h  f_fault.h  f_mask.cpp  f_mask_ineq.cpp  (+78 more)
src/surfit_cmd/: CMakeLists.txt
src/surfit_cmd/src/: resource.h  surfit_cmd.cpp
src/surfit_io/: CMakeLists.txt
src/surfit_io/src/: area_bln.cpp  area_io.h  area_io_tcl.cpp  area_io_tcl.h  area_shp.cpp  cntr_io.h  cntr_io_tcl.cpp  cntr_shp.cpp  curv_io.h  curv_io_tcl.cpp  mask_io_tcl.cpp  mask_io_tcl.h  mask_xyz.cpp  pnts_io_tcl.h  pnts_shp.cpp  surf_gmt.cpp  surf_grass.cpp  surf_grd.cpp  surf_io_tcl.cpp  surfit_io.h  surfit_io_ie.h  surfit_io_variables.h  surfit_io_wrap.cxx
src/tclsurfit/: CMakeLists.txt
src/tclsurfit/src/: func.i  surfit.i
surfit/: CHANGES  COPYING_free  Makefile.am  Makefile.in  PackageSurfit.sh  README  aclocal.m4  clean  clean.bat  config.h.in  configure  configure.in  make_debug.bat  make_release.bat  make_releases.bat  make_rpm  make_rpm_fc4  make_rpm_rh73  rpmmacros  run_examples.command  surfit.command  surfit.desktop  surfit.sln  surfit.spec  surfit.spec.fc4  surfit.spec.rh73  todo
surfit/acmlbooster/: Makefile.am  Makefile.in  acmlbooster.spec.fc4  acmlbooster.spec.rh73  clean.bat  config.h.in  configure  configure.in  libtool  make_debug.bat  make_release.bat  make_rpm_fc4  make_rpm_rh73  readme.txt  rpmmacros
surfit/acmlbooster/nsi/: acmlbooster.nsi
surfit/acmlbooster/src/: acml_cg.cpp  acml_threads.cpp  acmlbooster.cpp  acmlbooster.h  acmlbooster_ie.h  acmlbooster_wrap.cxx
surfit/acmlbooster/vc6/: acmlbooster.dsp  acmlbooster.dsw  acmlbooster.mak  acmlbooster_swig.bat
surfit/acmlbooster/vc7/: acmlbooster.sln  acmlbooster.vcproj  acmlbooster_swig.bat
surfit/bula/src/: bula.cxx  bula.rc  bula_view.cxx  bula_view.h  ie_bula.h  init_surfit.h  resource.h
surfit/debian/: README.Debian  changelog  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  surfit-default.ex  surfit.doc-base.EX  watch.ex
surfit/doc/: biblio.html  bula.cfg  cmofs.html  compare.html  doc_bula.bat  doc_freeflow.bat  doc_freeflow_src.bat  doc_funner.bat  doc_globe.bat  doc_surfit.bat  doc_surfit_src.bat  freeflow.cfg  freeflow_foot.html  freeflow_gallery.html  freeflow_head.html  freeflow_src.cfg  freeflow_src.tag  funner.cfg  gallery.html  globe.cfg  index.html  index_ru.html  make_docs  make_docs.bat  registration.html  surfit.cfg  surfit.tag  surfit_foot.html  surfit_src.cfg  surfit_src.tag
surfit/doc/src/: acmlbooster.doc  boosters.doc  cmofs.doc  compare.doc  datatypes.doc  datatypes_globe.doc  examples.doc  formats.doc  (+26 more)
surfit/examples/: run_all.tcl
surfit/html/: geological_modeling_ru.html  principles_ru.html  some_words.html  surfit.html  surfit_en.html  surfit_ru.html
surfit/m/: cg.m  cg2.m  dec_matr.m  dec_vec.m
surfit/mklbooster/: Makefile.am  Makefile.in  clean.bat  configure  configure.in  make_debug.bat  make_release.bat  make_rpm_fc4  make_rpm_rh73  mklbooster.spec.fc4  mklbooster.spec.rh73  readme.txt
surfit/nsi/: surfit.ini  surfit.nsi  surfit_doc.nsi
surfit/vc10x/: freeflow.vcxproj  globe.vcxproj  make_debug.bat  make_release.bat  make_release_SSE.bat  make_release_SSE2.bat  sstuff.vcxproj  surfit.sln  surfit.vcxproj  surfit_cmd.vcxproj  surfit_io.vcxproj  surfit_io.vcxproj.filters  surfit_io_swig.bat  surfit_swig.bat
surfit/vc6/: bula.dsp  freeflow.dsp  freeflow.mak  freeflow_swig.bat  funner2d.dsp  globe.dsp  globe.mak  globe_swig.bat  make_debug.bat  make_release.bat  sstuff.dsp  sstuff.mak  surfit.dsp  surfit.dsw  surfit.mak  surfit_io.dsp  surfit_io.mak  surfit_io_swig.bat  surfit_swig.bat
surfit/vc7/: freeflow.vcproj  globe.vcproj  make_debug.bat  make_release.bat  make_release_SSE.bat  make_release_SSE2.bat  sstuff.vcproj  surfit.sln  surfit.vcproj  surfit_io.vcproj
surfit/vc8/: freeflow.vcproj  freeflow.vcxproj.filters  freeflow_swig.bat  globe.vcproj  globe.vcxproj  globe.vcxproj.filters  globe_swig.bat  make_debug.bat  make_release.bat  make_release_SSE.bat  make_release_SSE2.bat  sstuff.vcproj  sstuff.vcxproj  sstuff.vcxproj.filters  surfit.sln  surfit.vcproj  surfit.vcxproj.filters  surfit_cmd.rc  surfit_cmd.vcproj  surfit_cmd.vcxproj.filters  surfit_io.vcproj  surfit_io.vcxproj
(+1884 files in other folders)
